--- a/src/pages/SearchPage/SearchPage.css
+++ b/src/pages/SearchPage/SearchPage.css
@@ -5,7 +5,7 @@
   background-color: #fff;
   z-index: 100;
   align-items: flex-start;
-  padding: 30px;
+  padding: 15px;
   border-bottom: 1px solid lightgrey;
 }
 .searchPage__logo {
@@ -43,10 +43,17 @@
 }
 .searchPage__option a {
   margin-left: 5px;
+  font-size: 13px;
 }
 
 .searchPage__result {
-  margin: 40px 0;
+  margin: 30px 0;
+}
+.searchPage__result a:nth-child(1) {
+  font-size: 14px;
+  line-height: 1.3;
+  text-decoration: none;
+  color: #202124;
 }
 .searchPage__resultCount {
   color: #70757a;
@@ -57,4 +64,27 @@
   margin-top: 20px;
   margin-left: 240px;
   margin-bottom: 50px;
+}
+.searchPage__resultImage {
+  object-fit: contain;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+}
+.searchPage__resultTitle {
+  text-decoration: none;
+}
+.searchPage__resultTitle:hover {
+  text-decoration: underline;
+}
+.searchPage__resultTitle > h2 {
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 5px;
+}
+.searchPage__resultSnipped {
+  margin-top: 10px;
+}
+.searchPage__resultSnipped {
+  font-size: 14px;
 }
